package in.aj7parihar.lld218072024.lld2class7.observerdesignpattern.subscriber;

public interface Subscribers {
    void update();
}
